# Porthole

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Package.resolved  Package.swift  README.md  README.vi.md  README.zh.md  appcast.xml  index.html  robots.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: apt.yml  ci.yml  linux.yml  pages.yml  windows.yml
Sources/App/: Actions.swift  AppState.swift  ButtonStyles.swift  ContentView.swift  FooterView.swift  IgnoreStore.swift  IgnoredTabView.swift  Localization.swift  PortListView.swift  PortRowView.swift  PortholeApp.swift  ProjectGroupView.swift  ScanCoordinator.swift  ScanService.swift  StatusBarController.swift  UpdaterController.swift  main.swift
Sources/App/Resources/en.lproj/: Localizable.strings
Sources/App/Resources/vi.lproj/: Localizable.strings
Sources/App/Resources/zh-Hans.lproj/: Localizable.strings
Sources/PortholeCore/: CloudflaredParser.swift  CommandRunner.swift  IgnoreRules.swift  LocaltunnelParser.swift  LsofParser.swift  Models.swift  NgrokParser.swift  Placeholder.swift  PortAssembler.swift  ProcessNameHeuristic.swift  ProjectResolver.swift  TailscaleParser.swift
Tests/PortholeCoreTests/: CloudflaredParserTests.swift  IgnoreRulesTests.swift  LocaltunnelParserTests.swift  LsofParserTests.swift  NgrokParserTests.swift  PortAssemblerTests.swift  ProcessNameHeuristicTests.swift  ProjectResolverTests.swift  TailscaleParserTests.swift
apt/dists/stable/: InRelease  Release  Release.gpg
apt/dists/stable/main/binary-amd64/: Packages
apt/pool/main/: porthole_0.1.1-1_amd64.deb  porthole_0.1.2-1_amd64.deb
docs/superpowers/plans/: 2026-06-03-porthole.md
docs/superpowers/specs/: 2026-06-03-porthole-design.md
landing/: appcast.xml  index.html  llms.txt
linux/: Cargo.toml  README.md  install.sh  setup-apt.sh
linux/data/: org.datnt.Porthole.desktop  org.datnt.Porthole.metainfo.xml
linux/packaging/appimage/: build-appimage.sh
linux/packaging/apt/: apt-ftparchive.conf  porthole-apt-public.asc
linux/packaging/flatpak/: org.datnt.Porthole.yml
linux/porthole/: Cargo.toml
linux/porthole-core/: Cargo.toml
linux/porthole-core/src/: cloudflared_parser.rs  ignore_rules.rs  lib.rs  localtunnel_parser.rs  models.rs  ngrok_parser.rs  port_assembler.rs  process_name_heuristic.rs  project_resolver.rs  ss_parser.rs  tailscale_parser.rs
linux/porthole/src/: actions.rs  app.rs  host.rs  i18n.rs  ignore_store.rs  main.rs  scan_service.rs  updater.rs
linux/porthole/src/ui/: ignored_tab.rs  port_row.rs  project_group.rs  tray.rs  window.rs
scripts/: build-app.sh  mockup.html  release.sh  run.sh
windows/src/: app.js  index.html  styles.css
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: actions.rs  commands.rs  dto.rs  ignore_store.rs  lib.rs  main.rs  project_win.rs  scan.rs
worker/: wrangler.toml
worker/src/: index.js
