[package]
name = "porthole-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure port/tunnel detection logic for Porthole (Linux)."

[dependencies]
serde_json = "1"

[dev-dependencies]
tempfile = "3"
