[package]
name = "porthole"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dat Nguyen"]
description = "See which dev ports are running, which project owns each, and which tunnels point where, from your system tray."

# Standalone workspace so it does not join the Linux workspace.
[workspace]

[lib]
name = "porthole_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
porthole-core = { path = "../../linux/porthole-core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dirs = "5"

[profile.release]
opt-level = "s"
lto = true
strip = true
